[gd_scene load_steps=5 format=3 uid="uid://b8g8d2xr187w7"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_t2bna"]
[ext_resource type="VideoStream" path="res://graficos/PANTALLA-INICIO.ogv" id="2_13sgp"]
[ext_resource type="Texture2D" uid="uid://c2q3tdllqum5k" path="res://graficos/rectangulonegro.png" id="3_xx5ko"]
[ext_resource type="Texture2D" uid="uid://d1nq5jn1i6j5" path="res://graficos/TITULO VERTICAL.png" id="4_apflf"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t2bna")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 656.0
stream = ExtResource("2_13sgp")
autoplay = true
loop = true

[node name="Jugar" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 104.0
offset_right = 301.0
offset_bottom = 181.0
theme_override_font_sizes/font_size = 50
text = "Jugar"

[node name="Controles" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 208.0
offset_right = 360.0
offset_bottom = 285.0
theme_override_font_sizes/font_size = 50
text = "Controles"

[node name="Salir" type="Button" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 312.0
offset_right = 296.0
offset_bottom = 389.0
theme_override_font_sizes/font_size = 50
text = "Salir"

[node name="Atras" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 448.0
offset_right = 304.0
offset_bottom = 525.0
theme_override_font_sizes/font_size = 50
text = "Atrás"

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.509804)
position = Vector2(236.25, 240)
scale = Vector2(0.654167, 0.586667)
texture = ExtResource("3_xx5ko")

[node name="TextoControles" type="Label" parent="."]
layout_mode = 0
offset_left = 61.5001
offset_top = 72.0001
offset_right = 417.5
offset_bottom = 410.0
theme_override_font_sizes/font_size = 19
text = "Controlas a un submarino cuyo objetivo es escapar de las profundidades marinas y alcanzar la superficie.
Maneja el oxígeno recogiendo burbujas y evita ser golpeado por criaturas marinas.

Muévete usando las flechas del teclado o el joystick/flechas de un mando XBOX o PS4"
horizontal_alignment = 1
autowrap_mode = 3
justification_flags = 35

[node name="Titulo" type="Sprite2D" parent="."]
position = Vector2(816, 296)
texture = ExtResource("4_apflf")

[connection signal="pressed" from="Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="Controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Atras" to="." method="_on_atras_pressed"]
